# fp-homework

./: README.md  stack.yaml
hw0/: LICENSE  README.md  hw0.cabal
hw0/src/: Task1.hs  Task2.hs  Task3.hs  Task4.hs  Task5.hs  Task6.hs  Task7.hs
hw1/: README.md  hw1.cabal
hw1/src/: Block1.hs  Block2.hs  Block3.hs  Block4.hs  Block5.hs  Lib.hs
hw2/: README.md  hw2.cabal
hw2/src/: Block1.hs  Block2.hs  Block2_1.hs  Block3.hs  Bonus.hs
hw2/test/: EvalTest.hs  Main.hs  ParserTest.hs  StringSumTest.hs
hw3/: README.md  hw3.cabal
hw3/app/: Shell.hs  script.sh
hw3/src/: BashInterpreter.hs  BashParser.hs
hw4/: README.md  hw4-bench.html  hw4-benchGauss.html  hw4-benchGaussVector.html  hw4-benchGeometry.html  hw4-benchMatrixes.html  hw4.cabal
hw4/app/: Main.hs
hw4/bench/: Spec.hs
hw4/src/: Main.hs  Task1.hs  Task2.hs  Task3.hs  Task5.hs
hw4/test/: GaussTest.hs  GeometryTest.hs  Main.hs  MatrixMultiplyTest.hs  Spec.hs  Task1Test.hs
hw5/: README.md  hw5.cabal
hw5/src/: Task1.hs  Task5.hs  Task6.hs  Task7.hs  Task8.hs
hw5/test/: Main.hs  PairLensTest.hs  STTest.hs
