name:                hw4
version:             0.1.0.0
synopsis:            Synopsis for task 4
description:         Task 4 for FP ITMO course

homepage:            https://github.com/AnverK/fp-homework/tree/master/hw4#readme
license:             MIT
license-file:        LICENSE
author:              Anver Khusainov
maintainer:          hanver12@gmail.com
copyright:           2019 Anver Khusainov

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Main
                     , Task1
                     , Task2
                     , Task3
                     , Task5
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
                     , parallel >= 3.2.2 && < 3.3
                     , stm >= 2.5 && < 2.6
                     , random >= 1.1 && < 1.2
                     , vector >= 0.12 && < 0.13
                     , deepseq >= 1.4.4 && < 1.5
                     , containers >= 0.6.0.1
                     , transformers >= 0.5.6.2
                     , exceptions >= 0.10 && < 0.11
  default-language:    Haskell2010

executable hw4
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hw4
                     , random >= 1.1 && < 1.2
                     , transformers >= 0.5.6.2
  default-language:    Haskell2010

test-suite hw4-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:       MatrixMultiplyTest
                     , GeometryTest
                     , GaussTest
  build-depends:       base >= 4.9 && < 5
                     , hw4
                     , hspec
                     , QuickCheck
                     , matrix
  ghc-options:         -Wall  -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

benchmark hw4-bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Spec.hs
  build-depends:       base
                     , hw4
                     , criterion >= 1.5.4 && < 1.6
                     , random >= 1.1 && < 1.2
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
